# py-fieldex

./: .commit_template  Makefile  README.md  pyproject.toml
py_fieldex/: __init__.py  analyzer.py  char_filter.py  field.py  filter.py  index_template.py  tokenizer.py
py_fieldex/built_in/: char_filter.py  filter.py  tokeinzer.py
tests/: test_analyzer.py
