[tool.poetry]
name = "py-fieldex"
version = "0.1.0"
description = "a field based index template builder"
authors = ["ivixvi <epitus628@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"

[tool.isort]
profile = "black"
src_paths = ["py_fieldex", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
